--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,11 @@
 @import './variables';
+@import './utils';
 @import './margin';
+@import './align';
 @import './button';
 @import './header';
+@import './banner';
+@import './menu';
 body {
     margin: 0;
     padding: 0;
@@ -9,17 +13,12 @@ body {
     font-family: $font-heading-family;
 }
 
-.center-align {
-    display: flex;
-    justify-content: center;
-}
-
 .view-content {
     width: 80%;
 }
 
 //Phone style
-@media only screen and (min-width: 320px) and (max-width: 480px) {
+@media only screen and (min-width: 320px) and (max-width: 768px) {
     .view-content {
         width: 95%;
     }
