--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,6 +3,15 @@ header {
     height: 5rem;
     background-color: $color-secondary-background;
     color: $color-secondary-background-text;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    transition: top 0.5s ease-in-out;
+}
+
+.header-animate {
+    top: -5rem;
 }
 
 .nav {
