--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -11,11 +11,12 @@
     padding-top: 2rem;
     &-container {
         display: flex;
-        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
     &-card {
         padding: 0 1rem;
-        width: 50%;
+        width: 45%;
         transition: opacity .3s ease-in-out;
         &:hover {
             box-shadow: 10px 10px 25px #00000024;
@@ -62,6 +63,10 @@
         }
         &-desc {
             @extend %menu-item-text;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
         &::after {
             content: '';
