--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -197,6 +197,16 @@ header {
   height: 5rem;
   background-color: #faf3ec;
   color: #000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  -webkit-transition: top 0.5s ease-in-out;
+  transition: top 0.5s ease-in-out;
+}
+
+.header-animate {
+  top: -5rem;
 }
 
 .nav {
@@ -315,6 +325,10 @@ header {
   white-space: nowrap;
   color: #4d4d4d;
   position: relative;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   cursor: pointer;
 }
 
@@ -403,15 +417,16 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .menu-card {
   padding: 0 1rem;
-  width: 50%;
+  width: 45%;
   -webkit-transition: opacity .3s ease-in-out;
   transition: opacity .3s ease-in-out;
   cursor: pointer;
@@ -473,6 +488,13 @@ header {
 .menu-item-cost {
   margin: 1em 0;
   letter-spacing: .05rem;
+}
+
+.menu-item-desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .menu-item::after {
