--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -1,3 +1,7 @@
+.main-container {
+    margin-top: 5rem;
+}
+
 .banner {
     background: linear-gradient(180deg, $color-secondary-background 70%, $color-background 0%);
     &-container {
