--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -247,6 +247,10 @@ header {
   }
 }
 
+.main-container {
+  margin-top: 5rem;
+}
+
 .banner {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #faf3ec), color-stop(0%, #fffbf6));
   background: linear-gradient(180deg, #faf3ec 70%, #fffbf6 0%);
@@ -461,6 +465,9 @@ header {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .menu-item-section-image-container {
@@ -508,6 +515,44 @@ header {
 
 .menu-item:hover::after {
   border: none;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .menu-card {
+    width: 100%;
+  }
+  .menu-item-section-image-container {
+    width: 5rem;
+    height: 5rem;
+  }
+  .menu-item-title {
+    line-height: 0.7;
+    font-size: 1.5rem;
+  }
+  .menu-item-cost {
+    font-size: 0.9rem;
+    margin: 0.5em 0;
+  }
+  .menu-item-desc {
+    font-size: 0.9rem;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .menu-item-section-area {
+    width: 70%;
+  }
+  .menu-item-section-image {
+    width: 30%;
+  }
+  .menu-item-section-image-container {
+    width: 6rem;
+    height: 6rem;
+  }
+  .menu-item-title {
+    font-size: 1.7rem;
+    height: 3rem;
+  }
 }
 
 body {
