--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -1,14 +1,6 @@
-%menu-item-text {
-    font-family: $font-body-family;
-    font-weight: $font-body-weight;
-    font-style: $font-body-style;
-    font-size: 1rem;
-    color: $color-body-text;
-}
-
 .menu {
     background: $color-background;
-    padding-top: 2rem;
+    padding: 2rem 0rem;
     &-container {
         display: flex;
         flex-wrap: wrap;
@@ -52,22 +44,24 @@
             letter-spacing: .05rem;
             line-height: 1.1;
             font-size: 2rem;
+            height: 2rem;
             &:hover {
                 text-decoration: underline;
                 text-decoration-thickness: 1px;
             }
         }
         &-cost {
-            @extend %menu-item-text;
+            @extend %body-text-default;
             margin: 1em 0;
             letter-spacing: .05rem;
         }
         &-desc {
-            @extend %menu-item-text;
+            @extend %body-text-default;
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            max-height: 2.5rem;
         }
         &::after {
             content: '';
@@ -130,6 +124,10 @@
             &-title {
                 font-size: 1.7rem;
                 height: 3rem;
+            }
+            &-desc {
+                -webkit-line-clamp: 3;
+                height: 3.5rem;
             }
         }
     }
