--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -172,7 +172,7 @@
           align-items: center;
 }
 
-.btn {
+.btn, .gift-button, footer .newsletter-container button {
   padding: 0;
   border: 0;
   -webkit-user-select: none;
@@ -404,17 +404,9 @@ header {
   }
 }
 
-.menu-item-cost, .menu-item-desc {
-  font-family: Helvetica, "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 1rem;
-  color: #746b60;
-}
-
 .menu {
   background: #fffbf6;
-  padding-top: 2rem;
+  padding: 2rem 0rem;
 }
 
 .menu-container {
@@ -485,6 +477,7 @@ header {
   letter-spacing: .05rem;
   line-height: 1.1;
   font-size: 2rem;
+  height: 2rem;
 }
 
 .menu-item-title:hover {
@@ -502,6 +495,7 @@ header {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  max-height: 2.5rem;
 }
 
 .menu-item::after {
@@ -553,6 +547,242 @@ header {
     font-size: 1.7rem;
     height: 3rem;
   }
+  .menu-item-desc {
+    -webkit-line-clamp: 3;
+    height: 3.5rem;
+  }
+}
+
+.gift {
+  background: #fffbf6;
+}
+
+.gift-container {
+  padding: 4rem 15rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.gift-img {
+  width: 40%;
+}
+
+.gift-content {
+  width: 40%;
+}
+
+.gift-title {
+  font-family: Cardo, serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: .05rem;
+  line-height: 0.7;
+  font-size: 3rem;
+  margin: 0.5em 0em;
+}
+
+.gift-rate {
+  letter-spacing: .05rem;
+}
+
+.gift-desc {
+  letter-spacing: .05rem;
+  line-height: 1.5;
+}
+
+.gift-button {
+  margin: 2rem 0rem;
+  width: 100%;
+  padding: 1.2em 2.4em;
+  font-weight: 700;
+  border: 1px solid #000000;
+}
+
+.gift-button:hover {
+  -webkit-box-shadow: 0 0 0 0.1rem #000000;
+          box-shadow: 0 0 0 0.1rem #000000;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .gift-container {
+    padding: 4rem 3rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .gift-img {
+    width: 100%;
+  }
+  .gift-content {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .gift-container {
+    padding: 4rem 3rem;
+  }
+}
+
+footer {
+  background: #faf3ec;
+  border-top: 1px solid #000000;
+}
+
+footer .footer-container {
+  padding: 2rem 0rem;
+}
+
+footer .footer-container small {
+  color: #746b60;
+  font-family: Helvetica, "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
+}
+
+footer .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 2rem;
+  width: 100%;
+}
+
+footer .contact-items {
+  width: 50%;
+}
+
+footer .contact-title {
+  font-family: Cardo, serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: .05rem;
+  line-height: 0.7;
+  font-size: 2rem;
+}
+
+footer .contact-desc {
+  letter-spacing: .05rem;
+  line-height: 1.5;
+}
+
+footer .newsletter-item-input {
+  width: 70%;
+  margin-right: 1rem;
+}
+
+footer .newsletter-item-button {
+  width: 25%;
+}
+
+footer .newsletter-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+footer .newsletter-container input {
+  outline: none;
+  margin: 0;
+  border: none;
+  border-bottom: 1px solid #000000;
+  color: #746b60;
+  font-family: Helvetica, "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
+  font-size: 1rem;
+  background-color: transparent;
+  height: 2rem;
+  width: 100%;
+}
+
+footer .newsletter-container input::-webkit-input-placeholder {
+  color: #746b60;
+}
+
+footer .newsletter-container input:-ms-input-placeholder {
+  color: #746b60;
+}
+
+footer .newsletter-container input::-ms-input-placeholder {
+  color: #746b60;
+}
+
+footer .newsletter-container input::placeholder {
+  color: #746b60;
+}
+
+footer .newsletter-container button {
+  width: 100%;
+  padding: 1em 2em;
+  font-weight: 700;
+  border: 1px solid #000000;
+}
+
+footer .newsletter-container button:hover {
+  -webkit-box-shadow: 0 0 0 0.1rem #000000;
+          box-shadow: 0 0 0 0.1rem #000000;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  footer .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer .contact-items {
+    width: 100%;
+  }
+  footer .newsletter-item-input {
+    width: 100%;
+  }
+  footer .newsletter-item-button {
+    margin-top: 1rem;
+    width: 100%;
+  }
+  footer .newsletter-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  footer .newsletter-item-input {
+    width: 100%;
+  }
+  footer .newsletter-item-button {
+    margin-top: 1rem;
+    width: 100%;
+  }
+  footer .newsletter-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 body {
@@ -565,6 +795,14 @@ body {
 
 .view-content {
   width: 80%;
+}
+
+.menu-item-cost, .menu-item-desc, .gift-rate, .gift-desc, footer .contact-desc {
+  font-family: Helvetica, "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
+  color: #746b60;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
