--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,8 @@
 @import './banner';
 @import './category';
 @import './menu';
+@import './gift';
+@import './footer';
 body {
     margin: 0;
     padding: 0;
@@ -16,6 +18,14 @@ body {
 
 .view-content {
     width: 80%;
+}
+
+%body-text-default {
+    font-family: $font-body-family;
+    font-weight: $font-body-weight;
+    font-style: $font-body-style;
+    font-size: 1rem;
+    color: $color-body-text;
 }
 
 //Phone style
