--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -28,3 +28,5 @@ $color-field-borders: #000000;
 //border
 $border-radius-button-and-badges: 2px;
 $border-radius-global: 0;
+$focus-color: rgba(116, 107, 96, 0.8);
+$focus-offset-color: #faf3ec;
