--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -60,8 +60,10 @@
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
             overflow: hidden;
-            max-height: 2.5rem;
+            height: 2.5rem;
+            line-height: 1.3;
         }
         &::after {
             content: '';
@@ -127,7 +129,7 @@
             }
             &-desc {
                 -webkit-line-clamp: 3;
-                height: 3.5rem;
+                height: 4rem;
             }
         }
     }
