--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -244,6 +244,58 @@
   color: #4d4d4d;
 }
 
+.dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 101;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.dialog-overlay {
+  background: #fffbf6;
+  opacity: 0.75;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.dialog-modal {
+  width: 60%;
+  border-radius: 0;
+  background-color: #fffbf6;
+  -webkit-box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  padding: 0 4rem;
+}
+
+.dialog-header {
+  width: 100%;
+  height: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 header {
   width: 100%;
   height: 5rem;
@@ -963,6 +1015,8 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: Cardo, serif;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #faf3ec), color-stop(0%, #fffbf6));
+  background: linear-gradient(180deg, #faf3ec 70%, #fffbf6 0%);
 }
 
 .view-content {
