--- a/src/styles/_dialog.scss
+++ b/src/styles/_dialog.scss
@@ -24,6 +24,7 @@
         box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
         z-index: 1;
         padding: 0 4rem;
+        height: 80%;
     }
     &-header {
         width: 100%;
@@ -31,5 +32,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+    &-content {
+        width: 100%;
+        height: calc(100% - 5rem);
+        overflow-y: auto;
     }
 }
