--- a/src/styles/_dialog.scss
+++ b/src/styles/_dialog.scss
@@ -32,6 +32,13 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        &-title {
+            text-transform: uppercase;
+            @extend %body-text-default;
+            letter-spacing: .05rem;
+            font-size: 0.7rem !important;
+            font-weight: 700 !important;
+        }
     }
     &-content {
         width: 100%;
@@ -39,3 +46,17 @@
         overflow-y: auto;
     }
 }
+
+//Phone style
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+    .dialog {
+        &-modal {
+            width: 100%;
+            height: 100%;
+            padding: 0 1rem;
+        }
+    }
+}
+
+//tablet style
+@media only screen and (min-width: 768px) and (max-width: 1024px) {}
