--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -81,6 +81,104 @@
     }
 }
 
+.dialog-menu-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    &-text {
+        width: 40%;
+        align-self: center;
+    }
+    &-image {
+        width: 50%;
+        display: flex;
+        align-items: center;
+    }
+    img {
+        object-fit: cover;
+        object-position: center;
+        width: 100%;
+    }
+    &-title {
+        font-family: $font-heading-family;
+        font-weight: $font-heading-weight;
+        font-style: $font-heading-style;
+        letter-spacing: .05rem;
+        line-height: 0.7;
+        font-size: 2rem;
+        margin: 0.5em 0em;
+    }
+    &-rate {
+        @extend %body-text-default;
+        letter-spacing: .05rem;
+    }
+    &-cart-button {
+        margin: 1rem 0rem;
+        width: 100%;
+        @extend %button-default;
+        padding: 1.2em 2.4em;
+        font-weight: $font-body-weight-bold;
+        border: 1px solid $color-field-borders;
+        &:hover {
+            box-shadow: 0 0 0 .1rem $color-field-borders;
+        }
+    }
+    p {
+        @extend %body-text-default;
+        letter-spacing: .05rem;
+        line-height: 1.5;
+    }
+    &-quantity {
+        width: 100%;
+        border-bottom: 1px solid $color-field-borders;
+        padding: 0.5rem 0;
+        margin: 2rem 0;
+        display: flex;
+        justify-content: space-between;
+        label {
+            font-size: 0.8rem;
+            cursor: pointer;
+            font-family: $font-body-family;
+            font-weight: $font-body-weight;
+            font-style: $font-body-style;
+            align-self: flex-end;
+        }
+        .quantity-control {
+            display: flex;
+            justify-items: end;
+            align-items: center;
+            button {
+                color: $color-body-text;
+            }
+            input {
+                outline: none;
+                margin: 0;
+                border: none;
+                color: black;
+                font-family: $font-body-family;
+                font-size: 1rem;
+                background-color: transparent;
+                width: 1rem;
+                height: 1rem;
+                margin: 0 1rem;
+                text-align: center;
+                &:focus-visible {
+                    outline: none;
+                    padding: 0px;
+                }
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+                -moz-appearance: textfield;
+            }
+        }
+    }
+}
+
 //Phone style
 @media only screen and (min-width: 320px) and (max-width: 768px) {
     .menu {
@@ -107,6 +205,15 @@
             }
         }
     }
+    .dialog-menu-content {
+        flex-direction: column-reverse;
+        &-text {
+            width: 100%;
+        }
+        &-image {
+            width: 100%;
+        }
+    }
 }
 
 //tablet style
@@ -131,6 +238,15 @@
                 -webkit-line-clamp: 3;
                 height: 4rem;
             }
+        }
+    }
+    .dialog-menu-content {
+        flex-direction: column-reverse;
+        &-text {
+            width: 100%;
+        }
+        &-image {
+            width: 100%;
         }
     }
 }
